--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #242424;
+  background-color: #232422;
+  /* background-color: #212224; */
   color: rgba(255, 255, 255, 1);
 }
 .container-fluid {
